# Tasks

./: .gitignore  Cargo.toml  lib.rs  readme.md  rust-toolchain.toml
.github/workflows/: rust.yml
Model/: lib.rs
src/: lib.rs  main.rs  mock.rs  tarefas.rs  tests.rs
tests/: tarefas_test.rs
