[package]
name = "task-pallet"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "FRAME pallet to manage tasks"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
sp-runtime = { workspace = true }
parity-scale-codec = { version = "3.0", features = ["derive"] }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-runtime/std",
]